--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
-    "@types/file-saver": "^2.0.5"
+    "@types/file-saver": "^2.0.5",
+    "gh-pages": "^6.0.0"
   }
 }
