--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -21,24 +21,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Detect package manager
-        id: detect-package-manager
-        run: |
-          if [ -f "${{ github.workspace }}/pnpm-lock.yaml" ]; then
-            echo "manager=pnpm" >> $GITHUB_OUTPUT
-            echo "command=install" >> $GITHUB_OUTPUT
-            echo "runner=pnpm" >> $GITHUB_OUTPUT
-            exit 0
-          else
-            echo "Unable to determine package manager"
-            exit 1
-          fi
-
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
           node-version: "16"
-          cache: ${{ steps.detect-package-manager.outputs.manager }}
+
+      - name: Install pnpm
+        run: npm install -g pnpm
 
       - name: Cache .pnpm-store
         uses: actions/cache@v3
@@ -48,19 +37,14 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pnpm-
 
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
-        with:
-          static_site_generator: next
-
       - name: Install dependencies
-        run: ${{ steps.detect-package-manager.outputs.runner }} ${{ steps.detect-package-manager.outputs.command }}
+        run: pnpm install
 
       - name: Build with Next.js
-        run: ${{ steps.detect-package-manager.outputs.runner }} build
+        run: pnpm build
 
       - name: Static HTML export with Next.js
-        run: ${{ steps.detect-package-manager.outputs.runner }} export
+        run: pnpm export
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
